--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "npx tsc",
+    "build": "webpack",
     "start": "node ./dist/index.js",
     "dev": "nodemon ./index.ts"
   },
@@ -19,8 +19,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/node": "^22.5.4",
+    "@types/webpack-node-externals": "^3.0.4",
     "nodemon": "^3.1.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.3"
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
